2003-08-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Mods.

2003-07-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/using.html: Make links local, point directly to
	Tutorial.

	* site/download/index.html: Add Cygwin info; run indent.

2003-07-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: Add Debian unstable/testing.

	* site/about/applications/index.html: Remove /input from doc urls.

2003-07-30  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* site/about/background/authors.html: Updated contact info

2003-07-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/applications/index.html: new file.
	
2003-07-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/why/index.html: new file. Add tons of images.

2003-07-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* dump-lily-web.sh: new file.

2003-07-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/donate.html: new file

	* site/about/faq.html: new file
	
2003-06-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/devel/compile/problems.html (href): add OpenBSD
	stack-protection note.

2003-04-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/devel/compile/index.html: add warning.

	* site/use/gui.html (href): new file.

2003-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/index.html: 
	* site/about/news/index.html: 
	* site/download/debian.html: Add link to Laura's package.

2003-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (site): Don't generate buttons.

	* format-page.py (button_active_template, button_template): Use
	non-mangled text and activeness.

	* site/about/menu-entries.py: Add features entry.

	* site/about/features.html: New file.

	* site/index.html: Add heading.

2003-04-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile (buttons): Use script-fu lily-buttons.

	* lily-button.scm: 
	* aqua-pill-button.scm: Fixes for scripting multiple buttons at once.

2003-04-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* newweb.css: Add margins.
